--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	
 	<h1>idisjfiosdjfjs</h1>
+	<img src="img/ronald-cuyan-434484.jpg">
 </body>
 </html>
