--- a/index.html
+++ b/index.html
@@ -1,32 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>jhikfgik	</title>
-</head>
-<body>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	
-	<h1>idisjfiosdjfjs</h1>
-	<img src="img/ronald-cuyan-434484.jpg">	<img src="img/yannick-pulver-410551.jpg">										            
-   </body><!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>無序列表3-1</title>
-</head>
-<body>
-<ul>
-<li>蘋果</li>
-<li>香蕉</li>
-<li>橘子</li>
-<li>水蜜桃</li>
-</ul>
-</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0;url=resume/index.html" />
+  </head>
 </html>
   
 
